# GeoForce

./: .gitignore  CMakeLists.txt  未命名.drawio
3rdlibs/: CMakeLists.txt
include/: event.hpp  glsl_loader.hpp  pch.hpp  renderer.hpp  ui.hpp
include/anim/: anim.hpp
include/render/: camera.hpp  geo.hpp  index_buffer.hpp  vertex_buffer.hpp
include/scene/: scene.hpp
resources/shader/: frag.glsl  vertex.glsl
src/: main.cpp  renderer.cpp  ui.cpp
src/render/: camera.cpp  index_buffer.cpp  vertex_buffer.cpp
